:lipstick: 게시글 태그 컴포넌트 분리 및 스타일링

--- a/src/contents/blog/trouble-shooting.mdx
+++ b/src/contents/blog/trouble-shooting.mdx
@@ -2,7 +2,7 @@
 title: 트러블슈팅
 publishedAt: 2023-10-14
 summary: 에러를 파악하고 해결한 과정을 소개합니다.
-tags: ["troubleshooting"]
+tags: ["troubleshooting", "tag2", "tag3", "tag4"]
 ---
 
 <Image
