:fire: 테스트 mdx파일 삭제 및 css 미세 조정

--- a/src/contents/blog/test-post.mdx
+++ b/src/contents/blog/test-post.mdx
@@ -1,8 +1,8 @@
 ---
-title: 두 번째 게시글 - 트러블슈팅
-publishedAt: 2023-10-14
-summary: 에러를 파악하고 해결한 과정을 소개합니다.
-tags: ["troubleshooting", "tag2", "tag3", "tag4"]
+title: 테스트 게시글
+publishedAt: 2024-02-02
+summary: 저의 첫 번째 테스트 게시글 입니다.
+tags: ["test", "tag1", "tag2"]
 ---
 
 <Image
@@ -81,7 +81,7 @@ export default makeSource({
 };
 ```
 
-## 주제입니다
+## 코드블록 테스트 중입니다..
 
 ```sh
 npm i shiki
