:pencil2: 경로, css 수정 등

--- a/src/contents/posts/test-post.mdx
+++ b/src/contents/posts/test-post.mdx
@@ -40,14 +40,14 @@ const postComputedFields: ComputedFields = {
   },
   image: {
     type: "string",
-    resolve: (doc) => `/blog/${getSlug(doc)}/image.png`,
+    resolve: (doc) => `/posts/${getSlug(doc)}/image.png`,
   },
 };
 
 export const Post = defineDocumentType(() => ({
   name: "Post",
   contentType:"mdx",
-  filePathPattern: `blog/**/*.mdx`,
+  filePathPattern: `posts/**/*.mdx`,
   fields: {
     title: { type: "string", required: true, },
     publishedAt: { type: "date", required: true, },
@@ -78,7 +78,6 @@ export default makeSource({
     rehypePlugins: [[rehypePrettyCode, prettyCodeOptions]]
   },
 });
-};
 ```
 
 ## 코드블록 테스트 중입니다..
